# tradenet

./: .gitignore  .pre-commit-config.yaml  .trivyignore  AUDIT_2026_05_29_PLAN.md  CLAUDE.md  Final_TRADEMARK_image_extractor_refine.py  README.md  TM_csv_builder.py  TM_csv_builder_legacy.py  Trademark Gazette - Redesign.html  audit_2026_05_29.json  audit_2026_05_29_raw.json  audit_comparison.txt  audit_contexts.json  build_cities_json.py  cities_overrides.json  company_suffixes.json  config_image_extractor.yaml  ui_demo.html
app/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20260520_0001_init.py  20260520_0002_widen_text_cols.py  20260520_0003_widen_ip_agency.py  20260520_0004_watchlists.py  20260521_0005_owner_indexes.py  20260521_0006_logo_path.py  20260526_0007_reconcile_index_names.py  20260526_0008_vienna_codes_gin.py  20260527_0009_trigram_indexes.py  20260527_0010_users_table.py  20260528_0011_tm_name_index.py  20260616_0012_pg_trgm_similarity_recall.py  20260616_0013_dmetaphone_recall_index.py  20260616_0014_watchlist_weights.py  20260617_0015_mark_category_lineage.py  20260617_0016_madrid_records.py  20260618_0017_madrid_goods_services.py  20260619_0018_madrid_sweep_control.py  20260619_0019_madrid_sweep_next_irn.py  20260619_0020_domestic_records.py  20260619_0021_domestic_sweep_control.py  20260621_0022_dead_mode_columns.py  20260622_0023_entity_clean_columns.py  20260623_0024_domestic_not_found.py  20260623_0025_madrid_sweep_mode.py  20260623_0026_domestic_coverage_index.py  20260624_0027_trademarks_vn_grant_date.py  20260624_0028_trademarks_mark_name.py  20260625_0029_trademarks_logo_phash.py  20260625_0030_trademarks_logo_kind.py  20260625_0031_trademarks_mark_embedding.py  20260626_0032_mark_name_recall_indexes.py  20260701_0033_trademark_is_representative.py  20260701_0034_is_representative_default_true.py  (+1 more)
app/backend/api/: _applicant_note.py  _dedup.py  _embed.py  _entity_norm.py  _filename.py  _phash.py  _status.py  auth.py  errors.py  logging_config.py  main.py  rate_limit.py  schemas.py  settings.py  similarity.py
app/backend/api/db/: models.py  (+2 more)
app/backend/domestic_enrich/: aimd.py  backfill.py  client.py  derive.py  enrich.py  idmap.py  noip_ca_bundle.pem  parser.py  store.py
app/backend/image_extractor/: __init__.py  extractor.py
app/backend/madrid_enrich/: __init__.py  backfill.py  client.py  derive.py  enrich.py  parser.py  store.py
app/backend/scripts/: audit_enrichment.py  audit_fields.py  audit_logos.py  backfill_applicant_note.py  backfill_entity_clean.py  backfill_is_representative.py  backfill_logo_kind.py  backfill_logo_paths.py  backfill_logo_phash.py  backfill_mark_embedding.py  backfill_mark_name.py  backfill_vn_grant.py  backup_db.sh  calibrate_phash_threshold.py  create_user.py  enrich_from_per_pdf_csvs.py  enrich_madrid.py  enrich_mark_samples.py  export_unique_applications.py  fill_registration_date_from_enrichment.py  load_tm_name_index.py  post_ingest_backfills.py  reconcile_domestic_not_found.py  rederive_madrid.py  remediate_unrendered_domestic.py  repair_nice_classes.py  smoke_ingest.py
app/backend/tests/: _similarity_cases.py  conftest.py  test_admin_madrid_stats.py  test_applicant_note.py  test_applicant_stats_dedup.py  test_auth.py  test_backfill_logo_kind.py  test_backfill_logo_phash.py  test_backfill_mark_embedding.py  test_backfill_mark_name.py  test_backfill_vn_grant.py  test_compare_status.py  test_db_saturation_backpressure.py  test_double_metaphone.py  test_double_metaphone_calibration.py  test_embed.py  test_entity_clean_backfill.py  test_entity_norm.py  test_facet_cache.py  test_filename.py  test_first_date_per_file.py  test_gazettes_overview.py  test_ingest_atomic.py  test_ingest_phash.py  test_is_representative.py  test_logo_kind_classifier.py  test_madrid_sweep_control.py  test_madrid_sweep_job.py  test_mapper_nice_classes.py  test_marks_enrichment.py  test_parse_applicant_field.py  test_per_matter_weights.py  test_phash_indexer.py  test_process_text.py  test_purge_recompute.py  test_resolve_logo_path.py  test_run_image_extraction.py  test_run_worker_queues.py  test_search_dedup.py  test_search_dedup_filter_facets.py  (+21 more)
app/backend/tm_extractor/: __init__.py  applicant.py  cli.py  config.py  data_loaders.py  processor.py  text_processor.py
app/backend/tm_similarity/: __init__.py  classes.py  composite.py  double_metaphone.py  features.py  phonetic.py  semantic.py  visual.py  vn_phonetic.py
app/backend/worker/: domestic_sweep.py  ingest.py  madrid_sweep.py  mapper.py  run_worker.py
qa/: .env.example  .gitignore  README.md  REPORT.md  config.yaml  pyproject.toml
qa/data/: confusable-pairs.yaml
qa/src/tnqa/: __init__.py  asyncclient.py  census.py  run.py  similarity.py  stress.py
(+270 files in other folders)
